# awesome-list-miner

./: .projenrc.py  pytest.ini  requirements.txt  setup.cfg
docs/: architecture.md
src/awesome_list_miner/: __main__.py  md_parser.py
src/awesome_list_web_scraper/: get_awesome_lists.py  get_readme.py
tests/awesome_list_miner/: test_example.py  test_md_parser.py
tests/awesome_list_miner/__mocks__/: simple.md
tests/projen_template/: test_example.py
