[metadata]
name = awesome_list_miner
description = 
author = DeadlySquad13
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.10.8

[options]
packages =
    awesome_list_miner
install_requires =
python_requires = >=3.10.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
awesome_list_miner = py.typed
